@@ -1,6 +1,7 @@
 Date	Added
 
 2010/12/12
+	* Added enumeration for monster damage log field 'flag'. [Ai4rei]
 	* Removed disabled backup of script command 'isequipped' (since r1605). [Ai4rei]
 	* Made script engine's DEBUG_DISASM block use script_op2name, rather than hardcoding operator names as per TODO from r13083 (related r9569, follow up to r10667). [Ai4rei]
 	* Cleaned up MOTD reading (related r292 and r4552). [Ai4rei]
